<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/primary"
    android:layout_height="match_parent"
    tools:context="com.gmitmedia.ngelong.RegisterActivity">

    <ImageView
        android:id="@+id/background"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:visibility="invisible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_centerHorizontal="true"
                android:layout_margin="10dp"
                android:src="@drawable/title_image" />
        </RelativeLayout>

        <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="center"-->
        <!--android:layout_marginBottom="20dp"-->
        <!--android:layout_marginLeft="30dp"-->
        <!--android:layout_marginRight="30dp"-->
        <!--android:layout_marginTop="20dp"-->
        <!--android:background="#eeffffff"-->
        <!--android:orientation="vertical"-->
        <!--android:padding="30dp">-->
        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp"
            card_view:cardCornerRadius="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="30dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/register_title"
                    android:textColor="@color/accent"
                    android:textSize="22sp" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:hint="@string/login_email"
                    android:inputType="textEmailAddress" />

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:hint="@string/register_username" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:hint="@string/login_password"
                    android:inputType="textPassword" />

                <Button
                    android:id="@+id/register_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    android:gravity="center"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="@string/register_button"
                    android:textColor="@color/colorWhite"
                    app:backgroundTint="@color/colorAccent" />


            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>


</RelativeLayout>
